--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "generate-unique-id": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-number-format": "^5.3.4",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "react-select": "^5.8.0"
